--- a/cases/function/expression/test_arithmetic.yaml
+++ b/cases/function/expression/test_arithmetic.yaml
@@ -620,7 +620,7 @@ cases:
       - rows:
           - [ 0, 5, 15, 0, 10, 0 ]
   - id: bitwise_operators_fail
-    desc: bitwise and/or/xor, fail on non-integral type
+    desc: bitwise and/or/xor, fail on non-integral operands
     inputs:
       - columns: [ "c0 int", "c1 bool", "c2 float", "c3 double", "c4 string", "c5 date", "c6 timestamp" ]
         indexs: ["index1:c0:c6"]
@@ -650,7 +650,7 @@ cases:
       rows:
         - [ -4, -7, -13 ]
   - id: bitwise_not_fail
-    desc: bitwise not, fail on non-integral type
+    desc: bitwise not, fail on non-integral operand
     inputs:
       - columns: [ "c0 int", "c1 bool", "c2 float", "c3 double", "c4 string", "c5 date", "c6 timestamp" ]
         indexs: ["index1:c0:c6"]
@@ -663,3 +663,20 @@ cases:
       - [ '{0}.c1', '{0}.c2', '{0}.c3', '{0}.c4', '{0}.c5', '{0}.c6' ]
     expect:
       success: false
+  - id: bitwise_null_operands
+    desc: bitwise operation return null if any of operands is null
+    inputs:
+      - columns: ["c1 int16","c2 int32","c3 bigint", "c4 int", "c6 timestamp"]
+        indexs: ["index1:c3:c6"]
+        rows:
+          - [3, 6, 12, NULL, 1590738989000]
+    sql: |
+      select {0}.c1 & NULL as r1, {0}.c2 | NULL as r2, {0}.c3 ^ NULL as r3, ~ {0}.c4 as r4 from {0}
+    expect:
+      columns:
+        - r1 int16
+        - r2 int32
+        - r3 int64
+        - r4 int32
+      rows:
+        - [ NULL, NULL, NULL, NULL ]
