--- a/cases/function/expression/test_arithmetic.yaml
+++ b/cases/function/expression/test_arithmetic.yaml
@@ -595,6 +595,7 @@ cases:
            NULL, NULL, NULL, NULL, NULL]
   - id: bitwise_operators
     desc: bitwise and/or/xor
+    mode: hybridse-only
     inputs:
       - columns: ["c1 int16","c2 int32","c3 bigint", "c6 timestamp"]
         indexs: ["index1:c3:c6"]
@@ -605,13 +606,7 @@ cases:
     sql: |
       select c1 d[0] c1 as r11, c1 d[0] c2 as r12, c1 d[0] c3 as r13, c2 d[0] c2 as r22, c2 d[0] c3 as r23, c3 d[0] c3 as r33 from {0};
     expect:
-      columns:
-        - r11 int16
-        - r12 int32
-        - r13 bigint
-        - r22 int32
-        - r23 bigint
-        - r33 bigint
+      columns: [ 'r11 int16', 'r12 int32', 'r13 bigint', 'r22 int32', 'r23 bigint', 'r33 bigint' ]
     expectProvider:
       - rows:
           - [ 3, 2, 0, 6, 4, 12 ]
@@ -621,6 +616,7 @@ cases:
           - [ 0, 5, 15, 0, 10, 0 ]
   - id: bitwise_operators_fail
     desc: bitwise and/or/xor, fail on non-integral operands
+    mode: hybridse-only
     inputs:
       - columns: [ "c0 int", "c1 bool", "c2 float", "c3 double", "c4 string", "c5 date", "c6 timestamp" ]
         indexs: ["index1:c0:c6"]
@@ -635,6 +631,7 @@ cases:
       success: false
   - id: bitwise_operators_not
     desc: bitwise not
+    mode: hybridse-only
     inputs:
       - columns: ["c1 int16","c2 int32","c3 bigint", "c6 timestamp"]
         indexs: ["index1:c3:c6"]
@@ -643,14 +640,12 @@ cases:
     sql: |
       select ~c1 as r1, ~c2 as r2, ~c3 as r3 from {0}
     expect:
-      columns:
-        - r1 int16
-        - r2 int32
-        - r3 bigint
+      columns: [ 'r1 int16', 'r2 int32', 'r3 bigint']
       rows:
         - [ -4, -7, -13 ]
   - id: bitwise_not_fail
     desc: bitwise not, fail on non-integral operand
+    mode: hybridse-only
     inputs:
       - columns: [ "c0 int", "c1 bool", "c2 float", "c3 double", "c4 string", "c5 date", "c6 timestamp" ]
         indexs: ["index1:c0:c6"]
@@ -665,6 +660,7 @@ cases:
       success: false
   - id: bitwise_null_operands
     desc: bitwise operation return null if any of operands is null
+    mode: hybridse-only
     inputs:
       - columns: ["c1 int16","c2 int32","c3 bigint", "c4 int16", "c6 timestamp"]
         indexs: ["index1:c3:c6"]
@@ -673,15 +669,12 @@ cases:
     sql: |
       select {0}.c1 & {0}.c4 as r1, {0}.c2 | {0}.c4 as r2, {0}.c3 ^ {0}.c4 as r3, ~ {0}.c4 as r4 from {0}
     expect:
-      columns:
-        - r1 int16
-        - r2 int32
-        - r3 int64
-        - r4 int16
+      columns: [ 'r1 int16', 'r2 int32', 'r3 int64', 'r4 int16' ]
       rows:
         - [ NULL, NULL, NULL, NULL ]
   - id: bitwise_const_null_operands
     desc: bitwise operation return null if any of operands is null
+    mode: hybridse-only
     inputs:
       - columns: ["c1 int16","c2 int32","c3 bigint", "c4 int", "c6 timestamp"]
         indexs: ["index1:c3:c6"]
@@ -690,10 +683,6 @@ cases:
     sql: |
       select {0}.c1 & NULL as r1, {0}.c2 | NULL as r2, {0}.c3 ^ NULL as r3, ~ NULL as r4 from {0}
     expect:
-      columns:
-        - r1 int16
-        - r2 int32
-        - r3 int64
-        - r4 bool
+      columns: [ 'r1 int16', 'r2 int32', 'r3 int64', 'r4 bool' ]
       rows:
         - [ NULL, NULL, NULL, NULL ]
