--- a/java/openmldb-batch/pom.xml
+++ b/java/openmldb-batch/pom.xml
@@ -369,7 +369,7 @@
 					<verbose>false</verbose>
 					<failOnViolation>true</failOnViolation>
 					<includeTestSourceDirectory>true</includeTestSourceDirectory>
-					<failOnWarning>false</failOnWarning>
+					<failOnWarning>true</failOnWarning>
 					<sourceDirectory>${project.basedir}/src/main/scala</sourceDirectory>
 					<testSourceDirectory>${project.basedir}/src/test/scala</testSourceDirectory>
 					<configLocation>${project.basedir}/scala_style.xml</configLocation>
