--- a/cases/function/expression/test_arithmetic.yaml
+++ b/cases/function/expression/test_arithmetic.yaml
@@ -621,7 +621,7 @@ cases:
         rows:
           - [1, true, 1.0, 2.0, "abc", "2012-8-11", 1590738989000]
     sql: |
-      select d[1] d[0] 10 as r1 from {0}
+      select d[1] d[0] 10 as r1 from {0};
     dataProvider:
       - ['&', '|', '^']
       - [ '{0}.c1', '{0}.c2', '{0}.c3', '{0}.c4', '{0}.c5', '{0}.c6' ]
@@ -635,7 +635,7 @@ cases:
         rows:
           - [3, 6, 12, 1590738989000]
     sql: |
-      select ~c1 as r1, ~c2 as r2, ~c3 as r3 from {0}
+      select ~c1 as r1, ~c2 as r2, ~c3 as r3 from {0};
     expect:
       columns: [ 'r1 int16', 'r2 int32', 'r3 bigint']
       rows:
@@ -648,7 +648,7 @@ cases:
         rows:
           - [1, true, 1.0, 2.0, "abc", "2012-8-11", 1590738989000]
     sql: |
-      select d[0] d[1] as r1 from {0}
+      select d[0] d[1] as r1 from {0};
     dataProvider:
       - ['~']
       - [ '{0}.c1', '{0}.c2', '{0}.c3', '{0}.c4', '{0}.c5', '{0}.c6' ]
@@ -662,7 +662,7 @@ cases:
         rows:
           - [3, 6, 12, NULL, 1590738989000]
     sql: |
-      select {0}.c1 & {0}.c4 as r1, {0}.c2 | {0}.c4 as r2, {0}.c3 ^ {0}.c4 as r3, ~ {0}.c4 as r4 from {0}
+      select {0}.c1 & {0}.c4 as r1, {0}.c2 | {0}.c4 as r2, {0}.c3 ^ {0}.c4 as r3, ~ {0}.c4 as r4 from {0};
     expect:
       columns: [ 'r1 int16', 'r2 int32', 'r3 int64', 'r4 int16' ]
       rows:
@@ -675,7 +675,7 @@ cases:
         rows:
           - [3, 6, 12, NULL, 1590738989000]
     sql: |
-      select {0}.c1 & NULL as r1, {0}.c2 | NULL as r2, {0}.c3 ^ NULL as r3, ~ NULL as r4 from {0}
+      select {0}.c1 & NULL as r1, {0}.c2 | NULL as r2, {0}.c3 ^ NULL as r3, ~ NULL as r4 from {0};
     expect:
       columns: [ 'r1 int16', 'r2 int32', 'r3 int64', 'r4 bool' ]
       rows:
