ci: fix java all-in-one deploy
hybridse is now sub-directory of OpenMLDB, however downloaded artifacts
still download into git root, not 'hybridse' sub-directory.

--- a/.github/workflows/hybridse-ci.yml
+++ b/.github/workflows/hybridse-ci.yml
@@ -240,6 +240,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: lib-artifacts
+          path: ${{ env.HYBRIDSE_PATH }}
 
       - uses: actions/setup-java@v2
         with:
