--- a/java/openmldb-nearline-tablet/src/main/resources/openmldb-tablet.properties
+++ b/java/openmldb-nearline-tablet/src/main/resources/openmldb-tablet.properties
@@ -1,6 +1,8 @@
+server.host=127.0.0.1
 server.port=8123
 server.worker_threads=4
 server.io_threads=4
 
 zookeeper.cluster=172.24.4.55:12200
 zookeeper.root_path=/openmldb
+zookeeper.session_timeout=5000
