--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -16,7 +16,7 @@ jobs:
   build_and_cpp_ut:
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/4paradigm/hybridsql:0.3.0
+      image: ghcr.io/4paradigm/hybridsql:0.4.0
     env:
       OS: linux
     steps:
@@ -26,7 +26,7 @@ jobs:
           bash steps/init_env.sh
           mkdir -p build
           source /root/.bashrc && cd build && cmake -DSQL_PYSDK_ENABLE=OFF -DSQL_JAVASDK_ENABLE=OFF -DTESTING_ENABLE=ON .. && make -j$(nproc) && cd ../
-          rm -rf /depends/thirdparty/*
+          rm -rf thirdparty
 
       - name: pack OpenMLDB
         if: ${{ github.event_name == 'push' }}
@@ -57,16 +57,10 @@ jobs:
           path: |
             reports/*.xml
 
-      - name: cleanup
-        if: always()
-        run: |
-          source /etc/profile.d/enable-rh.sh
-          git clean -dfx
-
   sql_sdk_test:
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/4paradigm/hybridsql:0.3.0
+      image: ghcr.io/4paradigm/hybridsql:0.4.0
     steps:
       - uses: actions/checkout@v1
       - name: build
@@ -84,16 +78,11 @@ jobs:
           name: linux-ut-result-cpp-sdk-${{ github.sha }}
           path: |
             reports/*.xml
-      - name: cleanup
-        if: always()
-        run: |
-          source /etc/profile.d/enable-rh.sh
-          git clean -dfx
 
   sql_cluster_test:
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/4paradigm/hybridsql:0.3.0
+      image: ghcr.io/4paradigm/hybridsql:0.4.0
     steps:
       - uses: actions/checkout@v1
       - name: build
@@ -111,16 +100,11 @@ jobs:
           name: linux-ut-result-cpp-cluster-${{ github.sha }}
           path: |
             reports/*.xml
-      - name: cleanup
-        if: always()
-        run: |
-          source /etc/profile.d/enable-rh.sh
-          git clean -dfx
 
   java-sdk:
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/4paradigm/hybridsql:0.3.0
+      image: ghcr.io/4paradigm/hybridsql:0.4.0
     steps:
       - uses: actions/checkout@v2
 
@@ -151,7 +135,7 @@ jobs:
   python-sdk:
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/4paradigm/hybridsql:0.3.0
+      image: ghcr.io/4paradigm/hybridsql:0.4.0
     steps:
       - uses: actions/checkout@v1
       - name: build pysdk and sqlalchemy
@@ -223,7 +207,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [ "build_and_cpp_ut", "sql_sdk_test", "sql_cluster_test", "java-sdk", "python-sdk" ]
     container:
-      image: ghcr.io/4paradigm/hybridsql:0.3.0
+      image: ghcr.io/4paradigm/hybridsql:0.4.0
     if: >
       success() && startsWith(github.ref, 'refs/tags/v')
     steps:
